moved sources to root dir

--- a/test/CMakeLists.txt
+++ b/test/CMakeLists.txt
@@ -1,9 +1,9 @@
 file(GLOB SRCS "*.h" "*.cpp")
 
-include_directories(../main/)
+include_directories(../)
 include_directories(../../PinBank/)
 
-add_executable(RotaryEncoderTest ${SRCS} ../main/RotaryEncoder.cpp)
+add_executable(RotaryEncoderTest ${SRCS} ../RotaryEncoder.cpp)
 
 target_link_libraries(RotaryEncoderTest 
 	libgmock
